crates/fig-lexer/tests/snapshots/integration_tests__edge_cases__consecutive_pass_functions.snap
---
source: crates/fig-lexer/tests/integration_tests.rs
expression: tokens
---
- Func
- Ident: multiple_pass
- LParen
- RParen
- Arrow
- Ident: ok
- Newline
- Indent
- Pass
- Newline
- Dedent
- Func
- Ident: also_pass
- LParen
- RParen
- Arrow
- Ident: ok
- Newline
- Indent
- Pass
- Newline
- Dedent
