crates/fig-lexer/tests/snapshots/integration_tests__edge_cases__empty_string.snap
---
source: crates/fig-lexer/tests/integration_tests.rs
expression: tokens
---
- Func
- Ident: takes_string
- LParen
- Ident: s
- Colon
- LBracket
- U8
- RBracket
- RParen
- Arrow
- Ident: ok
- Newline
- Indent
- Pass
- Newline
- Dedent
- Func
- Ident: use_empty
- LParen
- RParen
- Arrow
- Ident: ok
- Newline
- Indent
- Let
- Ident: empty
- Eq
- StringLiteral: ""
- Newline
- Let
- Ident: also_empty
- Eq
- StringLiteral: ""
- Newline
- Ident: takes_string
- LParen
- StringLiteral: ""
- RParen
- Newline
- Pass
- Newline
- Dedent
