crates/fig-lexer/tests/snapshots/integration_tests__edge_cases__for_no_body.snap
---
source: crates/fig-lexer/tests/integration_tests.rs
expression: tokens
---
- Func
- Ident: no_body_for
- LParen
- Ident: data
- Colon
- LBracket
- I32
- RBracket
- RParen
- Arrow
- Ident: ok
- Newline
- Indent
- For
- Ident: item
- In
- Ident: data
- Newline
- Dedent
