crates/fig-lexer/tests/snapshots/integration_tests__edge_cases__interface_clauses_only.snap
---
source: crates/fig-lexer/tests/integration_tests.rs
expression: tokens
---
- Interface
- Ident: Allocator
- LBracket
- Ident: T
- RBracket
- Newline
- Indent
- Extends
- Newline
- Indent
- Ident: Display
- Newline
- Ident: Debug
- Newline
- Dedent
- Where
- Newline
- Indent
- Ident: T
- Colon
- Ident: Mem
- Newline
- Dedent
- Dedent
- Interface
- Ident: MustBeOrdered
- LBracket
- Ident: T
- RBracket
- Newline
- Indent
- Where
- Newline
- Indent
- Ident: T
- Colon
- Ident: Ord
- Newline
- Dedent
- Dedent
- Interface
- Ident: ExtendsOnly
- Newline
- Indent
- Extends
- Newline
- Indent
- Ident: Display
- Newline
- Ident: Debug
- Newline
- Dedent
- Dedent
