crates/fig-lexer/tests/snapshots/integration_tests__edge_cases__long_identifiers.snap
---
source: crates/fig-lexer/tests/integration_tests.rs
expression: tokens
---
- Func
- Ident: setup_long
- LParen
- RParen
- Arrow
- Ident: ok
- Newline
- Indent
- Let
- Ident: a_very_long_variable_name_that_goes_on_and_on_and_on
- Eq
- IntegerLiteral:
    base: Decimal
    digits: "42"
    suffix: ~
- Newline
- Pass
- Newline
- Dedent
- Func
- Ident: a_very_long_function_name_that_is_quite_descriptive
- LParen
- Ident: a_very_long_parameter_name
- Colon
- I32
- RParen
- Arrow
- I32
- Newline
- Indent
- Return
- Ident: a_very_long_parameter_name
- Newline
- Dedent
